# kagent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: env.example
deploy/grafana/: kagent-dashboard.json  self-correcting-agent-dashboard.json
deploy/kubernetes/: kagent.yaml  self-correcting-agent.yaml
deploy/prometheus/: kagent-rules.yaml  kagent-servicemonitor.yaml  self-correcting-agent-rules.yaml  self-correcting-agent-servicemonitor.yaml
deploy/systemd/: kagent.service  self-correcting-agent.service
docs/: architecture.md  deployment.md  internal-rollout.md  iteration_log.md  operations.md  production-readiness.md
docs/superpowers/plans/: 2026-06-16-production-hardening.md  2026-06-22-codex-style-runtime-phase-1.md  2026-07-10-ink-terminal-foundation.md  2026-07-14-runtime-activity-workspace.md  2026-07-15-post-tool-final-summary.md  2026-07-16-remove-provider-defaults.md
examples/: internal_runtime_client.py
npm/lib/: App.js  App.test.js  activity.js  activity.test.js  app-state.js  app-state.test.js  approval-choice.js  approval-choice.test.js  editor.js  editor.test.js  ink-runner.js  ink-runner.test.js  kagent-home.js  kagent-home.test.js  protocol.js  provider-setup.js  provider-setup.test.js  python-runner.js  runtime-client.js  terminal-input.js  terminal-text.js  terminal-width.js  transcript.js  transcript.test.js  ui-components.js  ui-components.test.js  update-manager.js  update-manager.test.js
npm/src/: App.test.tsx  App.tsx  activity.test.ts  activity.ts  app-state.test.ts  app-state.ts  approval-choice.test.ts  approval-choice.ts  editor.test.ts  editor.ts  ink-runner.test.ts  ink-runner.tsx  kagent-home.test.ts  kagent-home.ts  protocol.ts  provider-setup.test.ts  provider-setup.ts  runtime-client.ts  terminal-input.ts  terminal-text.ts  terminal-width.ts  transcript.test.ts  transcript.ts  ui-components.test.ts  ui-components.tsx  update-manager.test.ts  update-manager.ts
scripts/: continuous_iterate.sh  internal_rollout_acceptance.py  observability_acceptance.sh  production_approval_bundle.sh  production_readiness_audit.py  run_checks.sh  smoke_apply_patch_runtime.sh  smoke_internal_runtime.sh  smoke_real_llm_runtime.sh  smoke_service.sh  staging_acceptance.sh
src/kagent/: __init__.py
src/kagent/cli/: __init__.py  __main__.py  commands.py  main.py  (+8 more)
src/self_correcting_langgraph_agent/: __init__.py
tests/: test_agent_graph.py  test_batch.py  test_changelog.py  test_ci.py  test_cli.py  test_config_validation.py  test_deployment.py  test_docs.py  test_doctor.py  test_embedding_provider.py  test_evaluator.py  test_examples.py  test_integrations_audit.py  test_integrations_backends.py  test_integrations_memory.py  test_internal_rollout_docs.py  test_invariants.py  test_json_output.py  test_llm_provider.py  test_makefile.py  test_metrics.py  test_normalization.py  test_npm_package.py  test_operations_docs.py  test_packaging.py  test_patch_checkpoints.py  test_paths.py  test_pending_approval.py  test_planning.py  test_production_readiness_docs.py  test_project_branding.py  test_public_api.py  test_release_evidence.py  test_release_manifest.py  test_runtime.py  test_runtime_approval.py  test_runtime_context.py  test_runtime_delegation.py  test_runtime_hooks.py  test_runtime_module_boundaries.py  (+29 more)
(+118 files in other folders)
