[build-system]
requires = ["setuptools>=83.0.0", "wheel>=0.45,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "kagent"
version = "0.1.10"
description = "A bounded kagent built with LangGraph."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.6.11,<0.7",
    "prompt_toolkit>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1",
    "setuptools>=83.0.0",
    "wheel>=0.45,<1",
]

[project.scripts]
kagent = "kagent.cli:main"
kagent-doctor = "kagent.ops.doctor:main"
kagent-metrics = "kagent.ops.metrics:main"
kagent-release-evidence = "kagent.ops.release_evidence:main"
kagent-release-manifest = "kagent.ops.release_manifest:main"
kagent-serve = "kagent.service:main"
kagent-trace-prune = "kagent.service.trace_store:main"
kagent-trace-replay = "kagent.ops.trace_replay:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kagent = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore:urllib3 v2 only supports OpenSSL 1.1.1+:urllib3.exceptions.NotOpenSSLWarning",
    "ignore:The default value of `allowed_objects` will change in a future version:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
